Public template (sanitized)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img
                   id="characterImg"
                   class="character__img"
-                  src="./assets/klee.png"
+                  src="./assets/placeholders/character.svg"
                   alt="角色立绘"
                   draggable="false"
                 />
@@ -101,63 +101,63 @@
               <div class="gift-wall__hint" id="giftHint">可以拆 3 个礼物哦～</div>
               <div class="gift-grid" id="giftGrid" aria-label="九宫格礼物">
                 <button class="gift" type="button" data-gift="0" aria-label="拆礼物 1">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
                   </div>
                 </button>
                 <button class="gift" type="button" data-gift="1" aria-label="拆礼物 2">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
                   </div>
                 </button>
                 <button class="gift" type="button" data-gift="2" aria-label="拆礼物 3">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
                   </div>
                 </button>
                 <button class="gift" type="button" data-gift="3" aria-label="拆礼物 4">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
                   </div>
                 </button>
                 <button class="gift" type="button" data-gift="4" aria-label="拆礼物 5">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
                   </div>
                 </button>
                 <button class="gift" type="button" data-gift="5" aria-label="拆礼物 6">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
                   </div>
                 </button>
                 <button class="gift" type="button" data-gift="6" aria-label="拆礼物 7">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
                   </div>
                 </button>
                 <button class="gift" type="button" data-gift="7" aria-label="拆礼物 8">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
                   </div>
                 </button>
                 <button class="gift" type="button" data-gift="8" aria-label="拆礼物 9">
-                  <img class="gift__flower" src="./assets/flower.png" alt="" />
+                  <img class="gift__flower" src="./assets/placeholders/flower.svg" alt="" />
                   <div class="gift__content" aria-hidden="true">
                     <img class="gift__img" alt="礼物照片" />
                     <div class="gift__text"></div>
@@ -170,7 +170,7 @@
                 <div class="gift-result__mask" aria-hidden="true"></div>
                 <div class="gift-result__card" role="dialog" aria-modal="true" aria-label="结果">
                   <div class="gift-result__title">拆出来的 3 个礼物</div>
-                  <div class="gift-result__sub">截图发给三口一头AC手动机即可兑换</div>
+                  <div class="gift-result__sub">（截图发给我即可兑换～把这句话改成你的专属暗号）</div>
                   <div class="gift-result__grid" id="giftResultGrid" aria-label="三个礼物">
                     <div class="gift-result__item">
                       <img class="gift-result__img" alt="礼物 1" />
